# Simple-p6-Setup

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  gitmoji.md
.github/workflows/: build_and_run_tests.yml
src/: main.cpp  tests.cpp
